error on line 283, main.js

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 						<li class="active"><a href="#" data-nav-section="composition">Состав ЦК</a></li>
 						<li class="active"><a href="#" data-nav-section="work">Учебная работа</a></li>
 						<li><a href="#" data-nav-section="education">График консультаций</a></li>
-						<li><a href="#" data-nav-section="">Курсовое проектирование</a></li>
-						<li><a href="#" data-nav-section="">Дипломное проектирование</a></li>
-						<li><a href="#" data-nav-section="">Мероприятия</a></li>
-						<li><a href="#" data-nav-section="">Объявления</a></li> 
+						<li><a href="#" data-nav-section="course">Курсовое проектирование</a></li>
+						<li><a href="#" data-nav-section="diploma">Дипломное проектирование</a></li>
+						<li><a href="#" data-nav-section="events">Мероприятия</a></li>
+						<li><a href="#" data-nav-section="ads">Объявления</a></li> 
 						<li><a href="#" data-nav-section="contacts">Контактная информация</a></li>
 					</ul>
 				</div>
@@ -129,7 +129,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 									        	<div class="panel-body">
 									            <div class="row">
-										    		<img class="col-md-6" src="./images/poit/lazickas.jpg" alt="Лазицкас Екатерина Александровна">
+										    		<img id="previewImg" class="preview-img col-md-6" src="./images/poit/lazickas.jpg" alt="Лазицкас Екатерина Александровна">
 										    		<div class="col-md-6">
 														<p>Преподаватель высшей категории, председатель цикловой комиссии</p>
 														<p><a href="./personal/lazickas/index.html" target="_blank">Персональная страница</a></p>
@@ -148,7 +148,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 									        <div class="panel-body">
 									            <div class="row">
-													<img class="col-md-6" src="./images/poit/buyanova.jpg" alt="Буянова Светлана Григорьевна">
+													<img class="preview-img scol-md-6" src="./images/poit/buyanova.jpg" alt="Буянова Светлана Григорьевна">
 													<div class="col-md-6">
 													  <p>Преподаватель первой категории дисциплин специального цикла</p>
 													  <p><a href="./personal/buyanova/index.html" target="_blank">Персональная страница</a></p>
@@ -167,7 +167,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 									        <div class="panel-body">
 									            <div class="row">
-													<img class="col-md-6" src="./images/poit/vinichuk.jpg" alt="Виничук Ольга Николаевна">
+													<img class="preview-img col-md-6" src="./images/poit/vinichuk.jpg" alt="Виничук Ольга Николаевна">
 													<div class="col-md-6">
 													  <p>Преподаватель первой категории дисциплин общепрофессионального и&nbsp;специального циклов</p>
 													  <p><a href="./personal/vinichuk/index.html" target="_blank">Персональная страница</a></p>
@@ -186,7 +186,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
 									        <div class="panel-body">
 									            <div class="row">
-													<img class="col-md-6" src="./images/poit/karpovich.jpg" alt="Карпович Дарья Валерьевна">
+													<img class="preview-img col-md-6" src="./images/poit/karpovich.jpg" alt="Карпович Дарья Валерьевна">
 													<div class="col-md-6">
 													  <p>Преподаватель второй категории дисциплин общепрофессионального и&nbsp;специального циклов</p>
 													  <p><a href="./personal/karpovich/index.html" target="_blank">Персональная страница</a></p>
@@ -205,7 +205,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									    <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
 									        <div class="panel-body">
 									            <div class="row">
-													<img class="col-md-6" src="./images/poit/salnikova.jpg" alt="Сальникова Елена Александровна">
+													<img class="preview-img col-md-6" src="./images/poit/salnikova.jpg" alt="Сальникова Елена Александровна">
 													<div class="col-md-6">
 													  <p>Преподаватель второй категории дисциплин общепрофессионального и&nbsp;специального циклов</p>
 													  <p><a href="./personal/salnikova/index.html" target="_blank">Персональная страница</a></p>
@@ -224,7 +224,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									    <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
 									        <div class="panel-body">
 									            <div class="row">
-													<img class="col-md-6" src="./images/poit/tereshko.jpg" alt="Терешко Ольга Ивановна">
+													<img class="preview-img col-md-6" src="./images/poit/tereshko.jpg" alt="Терешко Ольга Ивановна">
 													<div class="col-md-6">
 													  <p>Преподаватель первой категории дисциплин общепрофессионального и&nbsp;специального циклов</p>
 													  <p><a href="./personal/tereshko/index.html" target="_blank">Персональная страница</a></p>
@@ -243,7 +243,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									    <div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
 									        <div class="panel-body">
 									            <div class="row">
-													<img class="col-md-6" src="./images/poit/pasha.png" alt="Грунтович Павел Николаевич">
+													<img class="preview-img col-md-6" src="./images/poit/pasha.png" alt="Грунтович Павел Николаевич">
 													<div class="col-md-6">
 														<p>Преподаватель без категории</p>
 														<p><a href="./personal/gruntovich/index.html	" target="_blank">Персональная страница</a></p>
@@ -262,7 +262,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									    <div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEight">
 									        <div class="panel-body">
 									            <div class="row">
-													<img class="col-md-6" src="./images/poit/olya.jpg" alt="Новик Ольга Владимировна">
+													<img class="preview-img col-md-6" src="./images/poit/olya.jpg" alt="Новик Ольга Владимировна">
 													<div class="col-md-6">
 														<p>Преподаватель без категории</p>
 														<p><a href="./personal/novik/index.html" target="_blank">Персональная страница</a></p>
@@ -281,7 +281,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									    <div id="collapseNine" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingNine">
 									        <div class="panel-body">
 									            <div class="row">
-													<img class="col-md-6" src="./images/poit/shved.png" alt="Швед Олег Александрович">
+													<img class="preview-img col-md-6" src="./images/poit/shved.png" alt="Швед Олег Александрович">
 													<div class="col-md-6">
 														<p>Преподаватель без категории</p>
 														<p><a href="./personal/shved/index.html" target="_blank">Персональная страница</a></p>
@@ -300,7 +300,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									    <div id="collapseTen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTen">
 									        <div class="panel-body">
 									            <div class="row">
-													<img class="col-md-6" src="./images/poit/tolstik.jpg" alt="Толстик Виктор Николаеви">
+													<img class="preview-img col-md-6" src="./images/poit/tolstik.jpg" alt="Толстик Виктор Николаеви">
 													<div class="col-md-6">
 														<p>Преподаватель первой категории дисциплин общепрофессионального и&nbsp;специального циклов</p>
 														<p><a href="./personal/tolstik/index.html" target="_blank">Персональная страница</a></p>
@@ -319,7 +319,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									    <div id="collapseEleven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEleven">
 									        <div class="panel-body">
 									            <div class="row">
-													<img class="col-md-6" src="./images/poit/vasilkova.png" alt="Василькова Анастасия Николаевна">
+													<img class="preview-img col-md-6" src="./images/poit/vasilkova.png" alt="Василькова Анастасия Николаевна">
 													<div class="col-md-6">
 														<p>Преподаватель первой категории дисциплин общепрофессионального и&nbsp;специального циклов</p>
 														<p><a href="./personal/vasilkova/index.html" target="_blank">Персональная страница</a></p>
@@ -335,7 +335,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				</div>
 			</section>
 			
-			<section class="colorlib-services"  data-section="work">
+			<section class="colorlib-work"  data-section="work">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-12 col-md-offset-6 col-md-pull-6 animate-box" data-animate-effect="fadeInLeft">
@@ -518,19 +518,18 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					</div>
 				</div>
 			</div>
-
+<!-- 
 		
 			<section class="colorlib-education" data-section="composition">
 				<div class="colorlib-narrow-content">
 				</div>
-			</section>
-
-			<section class="colorlib-experience" data-section="experience">
+			</section> -->
+			<section class="colorlib-education" data-section="education">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">Научно-методическая работа</span>
-							<h2 class="colorlib-heading animate-box">Научно-методическая работа</h2>
+							<span class="heading-meta">График консультаций</span>
+							<h2 class="colorlib-heading animate-box">График консультаций</h2>
 						</div>
 					</div>
 					<div class="row">
@@ -540,10 +539,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					            <div class="timeline-entry-inner">
 								<article class="timeline-entry animate-box" data-animate-effect="fadeInTop">
 					            <div class="timeline-entry-inner">
-					            	<div class="timeline-icon color-1 moodle"></div>
+					            	<div class="timeline-icon color-1"></div>
 					            	<div class="timeline-label">
-									<h2>Перечень публикаций</h2>
-									<p><a href="https://libeldoc.bsuir.by/handle/123456789/2812/simple-search?filterquery=%D0%91%D1%83%D1%8F%D0%BD%D0%BE%D0%B2%D0%B0%2C+%D0%A1.+%D0%93.&filtername=author&filtertype=equals" target="_blank">Репозиторий БГУИР</a></p>
+									<h2>Методические рекомендации</h2>
+									<p><a href=""http://www.example.com/myfile.pdf#page=4"" target="_blank">открыть в PDF</a></p>
 									</div>
 					            </div>
 					        	</article>
@@ -553,32 +552,97 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				</div>
 			</section>
 
-			<section class="colorlib-work" data-section="work">
+			<section class="colorlib-course" data-section="course">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">Повышение квалификации</span>
-							<h2 class="colorlib-heading animate-box">Повышение квалификации</h2>
+							<span class="heading-meta">Курсовое проектирование</span>
+							<h2 class="colorlib-heading animate-box">Курсовое проектирование</h2>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-12">
 				        	<div class="timeline-centered">
-
-									<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
-										<div class="timeline-entry-inner">
-												<div class="timeline-label">
-								<h2>Республиканский институт профессионального образования</h2>
-								<p>Методика создания и применения анимации в образовательном процессе, 2020 г.</p>
-								</div>
+								<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+									<div class="timeline-entry-inner">
+										<div class="timeline-label">
+										<h2>Методические рекомендации</h2>
+								<p><a href=""http://www.example.com/myfile.pdf#page=4"" target="_blank">открыть в PDF</a></p>
 										</div>
-									</article>
+									</div>
+								</article>
 					    	</div>
 						</div>
 					</div> 
 			</section>
+			
+			<section class="colorlib-diploma" data-section="diploma">
+				<div class="colorlib-narrow-content">
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+							<span class="heading-meta">Дипломное проектирование</span>
+							<h2 class="colorlib-heading animate-box">Дипломное проектирование</h2>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+				        	<div class="timeline-centered">
+					        	<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+								<article class="timeline-entry animate-box" data-animate-effect="fadeInTop">
+					            <div class="timeline-entry-inner">
+					            	<div class="timeline-label">
+									<h2>Методические рекомендации</h2>
+									<p><a href=""http://www.example.com/myfile.pdf#page=4"" target="_blank">открыть в PDF</a></p>
+									</div>
+					            </div>
+					        	</article>
+					    	</div>
+						</div>
+					</div>
+				</div>
+			</section>
 
-			<section class="colorlib-contact" data-section="contacts">
+			<section class="colorlib-events" data-section="events">
+				<div class="colorlib-narrow-content">
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+							<span class="heading-meta">Мероприятия</span>
+							<h2 class="colorlib-heading animate-box">Мероприятия</h2>
+						</div>
+					</div>
+							<div class="row">
+								<div class="col-md-12 col-md-offset-6 col-md-pull-6 animate-box" data-animate-effect="fadeInLeft">
+									<p>Описание мероприятий</p>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+									<div class="fancy-collapse-panel">
+										<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+											<div class="panel panel-default">
+												<div class="panel-heading" role="tab" id="headingOne">
+													<h4 class="panel-title">
+														<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Дата</a>
+													</h4>
+												</div>
+												<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+														<div class="panel-body">
+														<div class="row">
+															<div class="col-md-4 text-center animate-box">
+																
+															</div>
+														</div>
+													</div> 
+												</div>
+											</div>
+									</div>
+								</div>
+							</div>
+				</div>
+			</section>
+
+			<section class="colorlib-contacts" data-section="contacts">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
